update for crates.io push

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,18 @@
 [package]
 
 name = "bassert"
-version = "0.0.1"
+version = "0.0.2"
+license = "MIT"
 authors = ["scialex"]
+readme = "README.md"
+keywords = ["assert", "bassert"]
+repository = "https://github.com/scialex/bassert"
+description = """
+A Better Assert macro
+
+This macro will print out the values of each side of an expression and also the
+values of function arguments.
+"""
 
 [lib]
 name = "bassert"
